syntax = "proto3";

option go_package = "./generated/weather/";

package weather;

service WeatherService {
    rpc GetCurrentWeather(CurrentWeatherRequest) returns (CurrentWeatherResponse) {}
    rpc GetWeatherForecast(WeatherForecastRequest) returns (WeatherForecastResponse) {}
    rpc ReportWeatherCondition(ReportWeatherConditionRequest) returns (ReportWeatherConditionResponse) {}
}

message CurrentWeatherRequest {
    string location = 1;
}

message CurrentWeatherResponse {
    float temperature = 1;
    float humidity = 2;
    float wind_speed = 3;
}

message WeatherForecastRequest {
    string location = 1;
    int32 days = 2;
}

message WeatherForecastResponse {
    repeated WeatherForecast forecasts = 1;
}

message WeatherForecast {
    string date = 1;
    float temperature = 2;
    float humidity = 3;
    float wind_speed = 4;
}

message ReportWeatherConditionRequest {
    string location = 1;
    string date = 2;
}

message ReportWeatherConditionResponse {
    float temperature = 2;
    float humidity = 3;
    float wind_speed = 4;
    string condition = 5;
}